add lastpage.sty for vignette build on cran machines

--- a/vignettes/include/settings.tex
+++ b/vignettes/include/settings.tex
@@ -145,7 +145,7 @@
 % first few
 %-------------------------------------------------------------------------------
 
-\usepackage{lastpage}
+\usepackage{./include/lastpage}
 \usepackage{fancyhdr}
 
 \pagestyle{fancy}
