--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Release 0.1-1:
   * Added str() method.
   * Added replacer [ method.
+  * Remove \dontrun{} blocks from manual.
 
 Release 0.1-0:
   * Added fl() and dbl() casters.
