--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
+Release 0.1-2:
+  * Fix protect stack imbalance in R_init_NA().
+  * Hide 'restrict' keyword from C++ in inst/include headers.
+
 Release 0.1-1:
   * Added str() method.
   * Added replacer [ method.
   * Remove \dontrun{} blocks from manual.
-  * Fix protect stack imbalance in R_init_NA().
 
 Release 0.1-0:
   * Added fl() and dbl() casters.
