--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Release 0.1-2:
   * Fix protect stack imbalance in R_init_NA().
   * Hide 'restrict' keyword from C++ in inst/include headers.
+  * Move float BLAS/LAPACK functions (if built) and some utilities to static library.
 
 Release 0.1-1:
   * Added str() method.
