--- a/vignettes/float.Rnw
+++ b/vignettes/float.Rnw
@@ -1,11 +1,11 @@
-%\VignetteIndexEntry{Introducing float: 32-Bit Floats for R}
+%\VignetteIndexEntry{Introducing the float package: 32-Bit Floats for R}
 \documentclass[]{article}
 
 
 \input{./include/settings}
 
 
-\mytitle{Introducing {float}: 32-Bit Floats for R}
+\mytitle{Introducing the {float} package: 32-Bit Floats for {R}}
 \mysubtitle{}
 \myversion{0.1-2}
 \myauthor{
