--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ Release 0.1-2:
   * Fixed control logic in various [ calls.
   * Created float:::ldflags() for dynamic linking.
   * Added some skeleton support for names+row/col-names.
+  * Fixed performance bug with [.
+  * Fixed NA overflow bug with length() for large matrices.
+  * Fixed str() printing bug for matrices.
 
 Release 0.1-1:
   * Added str() method.
