--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Release 0.1-3:
+  * Added static library.
+
 Release 0.1-2:
   * Fixed protect stack imbalance in R_init_NA().
   * Hid 'restrict' keyword from C++ in inst/include headers.
