support non-logical center/scale in scale()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Release 0.2-1:
   * Better linking/flags.
   * Use static library on Windows.
+  * Add support for non-logical center/scale arguments in scale().
 
 Release 0.2-0:
   * Fixed protect stack imbalance in R_init_NA().
