--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Release 0.2-3:
   * Renamed 'len_t' in float/float32.h to 'float_len_t'.
   * Fixed several compiler warnings.
+  * Fixed header issue in float/slapack.h that affects C++.
 
 Release 0.2-2:
   * Added sign().
