--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Release 0.3-0:
   * Updated internals to LAPACK 3.10.0.
+  * Fixed LAPACK bug on gcc-12.
   * Package does a better job of searching for single precision BLAS/LAPACK
   symbols on the system on *NIX systems.
 
