--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Release 0.3-1:
   * Added iparam2stage to internal LAPACK build.
   * Fixed remaining non-void declared parameterless functions.
   * Fixed link flags in system BLAS/LAPACK configure tests.
+  * Updated citation file to use bibentry().
 
 Release 0.3-0:
   * Updated internals to LAPACK 3.10.0.
